Added .htacces file to cache, updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 # Aptana Project File
 .project
+
+# AR/activeCollab system directories
+content-backend/cache
+content-backend/compile
 content-backend/uploads
 content-backend/upload
+
+# Wordpress configuration file
+wp-config.php
