--- a/content-frontend/.htaccess
+++ b/content-frontend/.htaccess
@@ -10,6 +10,10 @@ php_value post_max_size 130M
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
+
+# Used to redirect report traffic to the backend URL
+RewriteRule reports/(.*)$ http://backend.accidentreview.com/reports/$1 [L]
+
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
