--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ content-backend/upload
 # Wordpress configuration file
 content-frontend/wp-config.php
 
-content-frontend/uploads/*
+#content-frontend/uploads/*
