Changed frontend htaccess and updated header link

--- a/content-frontend/.htaccess
+++ b/content-frontend/.htaccess
@@ -14,6 +14,9 @@ RewriteEngine On
 # Used to redirect report traffic to the backend URL
 RewriteRule reports/(.*)$ http://backend.accidentreview.com/reports/$1 [L]
 
+# Fake extensions for attachments
+RewriteRule uploads/(.*)\.(jpg|jpeg|gif|png)$ uploads/$1 [L]
+
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
